# Etrax

./: .gitignore  CHANGELOG.md  Etrax.cabal  cabal.project  flake.nix
.direnv/: flake-profile
ETRAX/: .envrc  .pre-commit-config.yaml  Etrax.cabal  flake.nix
ETRAX/src/: EtraxNFT.hs  EtraxStates.hs
ETRAX/testnet/: etraxNFT.policy  helper.sh  mintNFTEtrax.sh  myTester1.pkh  protocol.params
