cabal-version:      3.0
name:               Etrax
version:            0.1.0.0
license:            MIT
author:             Jim Aven
maintainer:         jimaven@duck.com
category:           SmartContract
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  EtraxNFT
    build-depends:    aeson
                    , base ^>=4.14.3.0
                    , bytestring
                    , cardano-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-ledger-api
                    , serialise
                    , Utilities
    hs-source-dirs:   src, Utilities
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -fexpose-all-unfoldings -fplugin-opt