cabal-version:      3.0
name:               Etrax
version:            0.1.0.0
license:            MIT
author:             Jim Aven
maintainer:         jimaven@duck.com
category:           SmartContract
build-type:         Simple
extra-source-files: CHANGELOG.md

default-extensions:
    NoFieldSelectors
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

library
    exposed-modules:  EtraxNFT
    build-depends:    , aeson
                      , base
                      , base16-bytestring
                      , bytestring
                      , cardano-binary
                      , data-default
                      , plutarch
                      , plutarch-extra
                      , liqwid-plutarch-extra
                      , plutus-core
                      , plutus-ledger-api
                      , plutus-simple-model
                      , plutus-tx
                      , ply-core
                      , ply-plutarch
                      , serialise
                      , text
                      , Utilities
    hs-source-dirs:   src, Utilities
    default-language: Haskell2010
    ghc-options: -Werror -Wall -Wcompat -Wincomplete-uni-patterns
                 -Wno-unused-do-bind -Wno-partial-type-signatures
                 -Wmissing-export-lists -Wincomplete-record-updates
                 -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
                 -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind